1998-08-07  Evan Lawrence <evan@worldpath.net>

	* Added the proper api to plugin_document_open and plugin_document_close
	  and had to make a minor modification of close_doc_execute to
	  incorporate them...

	* Temporarily added a gtkscrollball widget immediately above the scrollbar,
	  per Dan Dunbar's request - this is all part of my quest for world domination...

	* Temporarily added a foot/program menu, so as to give the gnome-gui guys something
	  to play with...

1998-08-06  Chris Lahey  <clahey@umich.edu>

	* plugin.h: 
	* plugin.c (process_next): 
	the plugin_document_close function is now required to return a
	bool based on whether the document actually closed.  Returns TRUE
	if the plugin actually closed.

1998-08-06  Chris Lahey  <clahey@umich.edu>

	* plugin.h: 
	* plugin.c: Added a document_close function to the API.

1998-07-29  Alex Roberts  <bse@dial.pipex.com>

	* Fixed the preferences routines, that had been mysteriously broken,
	  without even a word in this ChangeLog...!

1998-07-29  Evan Lawrence <evan@worldpath.net>

	* Got recent documents working for the gnome version.. Currently you can
	  change the # of documents it displays by redefining the  MAX_RECENT
	  variable.. The default is 4, per the style guide..

1998-07-31  Andy Kahn <kahn@zk3.dec.com>

	* fix three bugs reported by Mikael Hermansson:

	    1. opening a file that doesn't exist from the command line
	    results in seg fault.

	    2. doing "Save As" with a new filename results in subsequent
	    "Save" commands failing.

	    3. if quitting gedit and a changed file has not been saved,
	    selecting "Cancel" on the yes/no/cancel save dialog box results
	    in the original window disappearing and never coming back.

	* fix for bug reported by Marin Purgar, where if PLUGINDIR did not
	exist, readdir() causes a segv (e.g., on Linux).


1998-07-27  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* main.h: check for #defined GTK_HAVE_FEATURES_1_1_0 instead of
	GTK_HAVE_ACCEL_GROUP.